V97. Fixed figure imgs too big.

--- a/source/style.css
+++ b/source/style.css
@@ -77,10 +77,13 @@ h6 {
 }
 
 figure {
-  max-width: 100%;
   margin: var(--step2) 0 0 0;
   display: block;
   text-align: center;
+}
+
+figure img {
+  max-width: 100%;
 }
 
 /* Navigation */
